práctica objeto de fecha && setInterval()

--- a/clase3/mostrar-ocultar.html
+++ b/clase3/mostrar-ocultar.html
@@ -13,7 +13,7 @@
         <a href="#!" onclick="ocultar()">ocultar</a>
         <a href="#!" onclick="mostrar()">mostrar</a>
          -->
-        <a href="#!" ">mostrar | ocultar</a>
+        <a href="#!" onclick="mostrartexto()">mostrar | ocultar</a>
     </nav>
     <article id="caja"></article>
 
